# game-template

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt  run.sh
.zed/: debug.json
cmake/: MeshManifest.cmake  anim_scanner.c
src/: client.c  ecs.c  ecs.h  message.c  message.h  orbit_camera.c  orbit_camera.h  physics.c  physics.h  physics_jolt.c  server.c
